# agent-container

./: .gitignore  Cargo.toml  README.md
docker/: Dockerfile  agent-container-aws-refresh.sh  compose.yml
docker/proxy/: Dockerfile  allowlist.txt  tinyproxy.conf
src/: aws.rs  cli.rs  codex.rs  config_cmd.rs  creds.rs  docker.rs  main.rs  mcp.rs  mcp_client.rs  oauth.rs  paths.rs  policy.rs  proxy_allowlist.rs  server.rs  settings.rs  shared_cred.rs  stdio_mcp.rs  sync.rs  task_runner.rs  tui.rs
