[package]
name = "agent-container"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-container"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http1", "http2"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2", "json"] }
rustix = { version = "0.38", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "fs", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
